--- a/src/components/LeftSection/LeftSection.module.css
+++ b/src/components/LeftSection/LeftSection.module.css
@@ -8,5 +8,6 @@
   height: 100%;
   background-color: var(--color-background-dark);
   /* border: 2px solid var(--color-background-white); */
-  box-shadow: 0 0 4px 3px #181818;
+  /* box-shadow: 0 0 4px 3px #181818; */
+  box-shadow: inset 0 0 4px 3px #404040;
 }
