--- a/src/components/MidSection/Languages/Languages.module.css
+++ b/src/components/MidSection/Languages/Languages.module.css
@@ -8,7 +8,7 @@
   gap: 3rem;
   background-color: var(--color-background-dark);
   /* border: 2px solid var(--color-background-white); */
-  box-shadow: 0px 6px 4px 3px #000000;
+  box-shadow: inset 0 0 4px 3px #404040;
 }
 
 .languages__css {
@@ -21,9 +21,9 @@
   font-size: 2rem;
   color: var(--color-text-black);
   border: none;
-  box-shadow: 0 0 4px 3px #181818;
+  box-shadow: 0 0 4px 3px #404040;
   transition: all 0.3s ease-in-out;
-  transition: border-radius 0.3s ease-in-out;
+  transition: border-radius 0.1s ease-in-out;
 }
 
 .languages__html {
@@ -36,9 +36,9 @@
   font-size: 2rem;
   color: var(--color-text-black);
   border: none;
-  box-shadow: 0 0 4px 3px #181818;
+  box-shadow: 0 0 4px 3px #404040;
   transition: all 0.3s ease-in-out;
-  transition: border-radius 0.3s ease-in-out;
+  transition: border-radius 0.1s ease-in-out;
 }
 
 .languages__html:active,
