--- a/src/components/RightSection/Font/Font.module.css
+++ b/src/components/RightSection/Font/Font.module.css
@@ -1,7 +1,7 @@
 .font {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .font__title {
@@ -11,7 +11,11 @@
   background-color: var(--color-background-transparent-black);
   padding: 1rem 1.6rem;
   border-radius: 1rem;
-  box-shadow: 0 0 4px 3px #181818;
+  box-shadow: 0 0 4px 3px #404040;
+  transition: background-color 0.1s ease-in-out;
+  &:hover {
+    background-color: var(--color-background-black);
+  }
 }
 
 .font__title-text {
@@ -23,5 +27,7 @@
 }
 
 .show {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
