--- a/src/components/WorkBench/WorkBench.module.css
+++ b/src/components/WorkBench/WorkBench.module.css
@@ -5,6 +5,10 @@
   height: 100%;
 }
 
+.workbench__left {
+  box-shadow: inset 0 0 4px 3px #404040;
+}
+
 .workbench__middle {
   display: flex;
   flex-direction: column;
@@ -21,4 +25,5 @@
   scrollbar-width: thin;
   scrollbar-color: var(--color-background-transparent-black) transparent;
   overflow-y: scroll;
+  box-shadow: inset 0 0 4px 3px #404040;
 }
