--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,4 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html {
-  font-size: 62.5%;
-}
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
   /* TEXT COLOR */
@@ -31,7 +21,8 @@ html {
   --color-background-transparent-black: #5a5a5a4e;
 
   /* FONT FAMILY */
-  --font-system-ui: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --font-monserrat: "Montserrat", sans-serif;
+  /* --font-monserrat: system-ui, Avenir, Helvetica, Arial, sans-serif; */
 }
 
 [data-theme="dark"] {
@@ -49,7 +40,24 @@ html {
   --color-background-cyan-light: #771065;
   --color-background-blue: #0160e0;
   /* FONNT FAMILY*/
-  /* --font-system-ui: system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  /* --font-monserrat: system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  --font-monserrat: "Montserrat", sans-serif;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: var(--font-monserrat);
 }
 
 textarea {
