--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@
 
   /* BACKGROUND COLOR */
   --color-background-red: #ff0000;
-  --color-background-white: #fff;
+  --color-background-white: #ffffff;
+  --color-background-white-two: #f6f6f6;
   --color-background-gray: #c2c2c2;
   --color-background-gray-light: #e8e8e8;
   --color-background-dark-hard: #101010;
