--- a/src/components/MidSection/Languages/Languages.module.css
+++ b/src/components/MidSection/Languages/Languages.module.css
@@ -19,7 +19,7 @@
   font-size: 2rem;
   color: var(--color-text-black);
   border: none;
-  box-shadow: 0 0 4px 3px #404040;
+  box-shadow: 0 0 2px 2px #404040;
   transition: all 0.3s ease-in-out;
   transition: border-radius 0.1s ease-in-out;
 }
@@ -54,15 +54,27 @@
   filter: brightness(90%);
 }
 
-.languages__textarea {
-  display: none;
+.languages__title {
+  position: absolute;
+  top: 2rem;
+  right: 1rem;
+  color: var(--color-text-white);
+  font-size: 16px;
+}
+
+.languages__title-span {
+  color: var(--color-text-white);
+  background-color: var(--color-background-red);
+  padding: 0.2rem 0.5rem;
+  border-radius: 0.5rem;
+  font-style: italic;
 }
 
 .languages__copied {
   opacity: 0;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 1rem;
+  left: 1rem;
   background-color: var(--color-background-success);
   color: var(--color-text-black);
   padding: 0.7rem 2rem;
@@ -76,8 +88,8 @@
 .opacity-100 {
   animation: opacity-100 0.1s ease-in-out;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 1rem;
+  left: 1rem;
   background-color: var(--color-background-success);
   color: var(--color-text-black);
   padding: 0.7rem 2rem;
