--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --color-text-black: #242424;
   --color-text-black-light: #767676;
   --color-text-white: #fff;
+  --color-text-red: #ff0000;
 
   /* BACKGROUND COLOR */
   --color-background-red: #ff0000;
