--- a/src/components/MidSection/Button/Button.module.css
+++ b/src/components/MidSection/Button/Button.module.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--color-text-white);
+  background-color: var(--color-background-dark);
 }
 
 .workbench__button--anchor:hover {
