--- a/src/components/WorkBench/WorkBench.module.css
+++ b/src/components/WorkBench/WorkBench.module.css
@@ -5,25 +5,20 @@
   height: 100%;
 }
 
-.workbench__left {
-  box-shadow: inset 0 0 4px 3px #404040;
-}
-
 .workbench__middle {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--color-background-white-two);
-  border-radius: 20px 0px 0px 0px;
+  background-color: var(--color-background-black);
+  border-radius: 20px 0px 0px 0px; */
 }
 
 .workbench__right {
   color: var(--color-text-white);
-  background-color: var(--color-background-dark);
+  background-color: var(--color-background-black);
   padding: 4rem;
   overflow: auto;
   scrollbar-width: thin;
   scrollbar-color: var(--color-background-transparent-black) transparent;
   overflow-y: scroll;
-  box-shadow: inset 0 0 4px 3px #404040;
 }
