--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   --color-background-gray-light: #e8e8e8;
   --color-background-dark-hard: #101010;
   --color-background-dark: #101010;
+  --color-background-black: #000000;
   --color-background-dark-light: #383838;
   --color-background-blue: #0160e0;
   --color-background-success: #1de44b;
