--- a/src/components/LeftSection/LeftSection.module.css
+++ b/src/components/LeftSection/LeftSection.module.css
@@ -1,10 +1,62 @@
+.button__container {
+  background-color: var(--color-background-transparent-black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgb(75, 75, 75);
+  width: 100%;
+  height: 100%;
+}
+
+.button__sub-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s;
+  transform-style: preserve-3d;
+}
+
+.button__container:hover .button__sub-container {
+  transform: rotateY(180deg);
+}
+
+.back {
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.back {
+  transform: rotateY(180deg);
+}
+
 .left-section {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
   align-items: center;
-  align-content: space-evenly;
+  align-content: stretch;
   padding: 2rem 2rem;
-  height: 100%;
-  background-color: var(--color-background-black);
+  height: 50%;
+  margin-top: auto;
+  margin-top: auto;
+}
+
+.button__container:nth-child(1) {
+  border-radius: 10px 0 0 0;
+}
+
+.button__container:nth-child(2) {
+  border-radius: 0 10px 0 0;
+}
+
+.button__container:nth-child(5) {
+  border-radius: 0 0 0 10px;
+}
+
+.button__container:nth-child(6) {
+  border-radius: 0 0 10px 0;
 }
