Update color palette

--- a/src/components/MidSection/Languages/Languages.module.css
+++ b/src/components/MidSection/Languages/Languages.module.css
@@ -18,7 +18,7 @@
   font-weight: 900;
   font-size: 2rem;
   color: var(--color-text-black);
-  -webkit-text-stroke: 1px #663399;
+  -webkit-text-stroke: 1px var(--color-background-css);
   border: none;
   box-shadow: 0 0 2px 2px #404040;
   transition: all 0.3s ease-in-out;
@@ -39,7 +39,7 @@
   font-weight: 900;
   font-size: 2rem;
   color: var(--color-text-black);
-  -webkit-text-stroke: 1px #e34c26;
+  -webkit-text-stroke: 1px var(--color-background-html);
   border: none;
   box-shadow: 0 0 4px 3px #404040;
   transition: all 0.3s ease-in-out;
