--- a/src/components/LeftSection/components/DarkMode.module.css
+++ b/src/components/LeftSection/components/DarkMode.module.css
@@ -1,15 +1,31 @@
 .dark-mode {
-  position: relative;
-  width: 8rem;
-  height: 2rem;
-  border: 1px solid #ccc;
-  background-color: #ccc;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 0.5rem;
+  max-width: 12rem;
 }
-.dark-mode__sun {
+
+.dark-mode__icon-bg {
+  position: relative;
+  width: 50px;
+  height: 15px;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: #939393;
+  box-shadow: 0px 0px 0px 2px var(--color-background-gray);
+}
+
+.dark-mode__icon-circle {
   position: absolute;
   left: 0;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: var(--color-background-gray-light);
+  transition: left 0.1s ease-in-out;
 }
-.dark-mode__moon {
-  position: absolute;
-  right: 0;
+
+.right {
+  left: calc(100% - 15px);
 }
