--- a/src/components/RightSection/Color/Color.module.css
+++ b/src/components/RightSection/Color/Color.module.css
@@ -1,7 +1,7 @@
 .color {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   margin-top: 2rem;
 }
 
@@ -25,14 +25,11 @@
 }
 
 .color__content {
-  /* max-height: 0; */
-  display: none;
-  /* overflow: hidden; */
-  /* overflow: auto; */
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
 }
 
 .show {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  max-height: 80rem;
 }
