--- a/src/components/RightSection/Font/Font.module.css
+++ b/src/components/RightSection/Font/Font.module.css
@@ -1,7 +1,7 @@
 .font {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .font__title {
@@ -23,11 +23,11 @@
 }
 
 .font__content {
-  display: none;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
 }
 
 .show {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  max-height: 80rem;
 }
