--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 
 [data-theme="light"] {
   /* TEXT COLOR */
-  --color-text-black: #fff;
+  --color-text-black: #ffffff;
   --color-text-white: #181717;
 
   /* BACKGROUND COLOR */
@@ -34,8 +34,9 @@
   --color-background-white: #e0dcdc;
   --color-background-gray: #c2c2c2;
   --color-background-gray-light: #e8e8e8;
-  --color-background-dark: #e0e0e0;
-  --color-background-black: #ffffff;
+  --color-background-dark: #ffffff;
+  --color-background-black: #e0e0e0;
+  --color-background-transparent-black: #ffffff;
 
   /* FONNT FAMILY*/
   /* --font-monserrat: system-ui, Avenir, Helvetica, Arial, sans-serif; */
