--- a/src/index.css
+++ b/src/index.css
@@ -60,13 +60,6 @@ body {
   font-family: var(--font-monserrat);
 }
 
-textarea {
-  resize: none;
-  border-radius: 5px;
-  padding: 4px;
-  color: var(--color-text-black);
-}
-
 li {
   list-style: none;
 }
@@ -83,4 +76,5 @@ hr {
 
 svg:hover {
   fill: var(--color-background-gray);
+  transform: scale(0.9);
 }
